# wallet-api

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  manage.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
tests/: conftest.py
tests/apps/wallet/api/: test_transaction.py  test_wallet.py
tests/apps/wallet/models/: test_transaction.py  test_wallet.py
tests/factories/: wallet.py
wallet_api/apps/wallet/: apps.py
wallet_api/apps/wallet/api/: serializers.py  views.py
wallet_api/apps/wallet/migrations/: 0001_initial.py
wallet_api/apps/wallet/models/: __init__.py  transaction.py  wallet.py
